# audio-browser

./: .coverage  .env.example  .eslintrc.json  .gitignore  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: files.py  scan.py  search.py  stats.py
backend/src/lib/: tokenizer.py
backend/src/models/: audio_file.py  db_init.py  folder_node.py  schema.py  search_index.py  user_preference.py
backend/src/services/: annotation_service.py  playback_service.py  scan_service.py  search_service.py  stats_service.py  tree_service.py  waveform_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_files_description.py  test_files_list.py  test_files_rating.py  test_files_tree.py  test_files_waveform.py  test_scan_start.py  test_scan_status.py  test_search.py  test_stats.py
backend/tests/integration/: test_concurrent_switch.py  test_persistence.py  test_search_filter.py  test_tree_and_play.py  test_waveform_generation.py
backend/tests/performance/: test_initial_load.py  test_play_latency.py  test_search_latency.py
backend/tests/unit/: test_search_service.py  test_tokenizer.py  test_waveform_service.py
docs/: api.md  manual-test.md  performance.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/components/: PlayerBar.ts  SearchFilter.ts  TreeView.ts  WaveformView.ts
reports/coverage/: coverage.xml
specs/001-/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+9 files in other folders)
