[project]
name = "audio-browser-backend"
version = "0.0.1"
description = "Backend for Audio Browser"
authors = [{name="AudioBrowser"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "sqlalchemy",
  "aiosqlite",
  "python-dotenv"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
